@@ -1,4 +1,5 @@
 3.0.12
+ * Fix rolling upgrade to 4.0+ (CASSANDRA-13274)
  * Legacy deserializer can create unexpected boundary range tombstones (CASSANDRA-13237)
  * Remove unnecessary assertion from AntiCompactionTest (CASSANDRA-13070)
  * Fix cqlsh COPY for dates before 1900 (CASSANDRA-13185)
